fix more issues on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 	position: relative;
 }
 
